<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/register"
    android:background="#FFFBFE"
    tools:context=".screens.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:id="@+id/main">

        <!-- כותרת -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/noot"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

        <!-- שם פרטי -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_register_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/FirstName"
            android:maxWidth="488dp"
            app:hintTextColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- שם משפחה -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_register_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/LastName"
            android:maxWidth="488dp"
            app:hintTextColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_register_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- דוא"ל -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_register_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/Email"
            android:maxWidth="488dp"
            app:hintTextColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_register_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- נייד -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_register_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/PhoneNumber"
            android:maxWidth="488dp"
            app:hintTextColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_register_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- תאריך לידה -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_register_birth_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/DateOfBirth"
            android:maxWidth="488dp"
            app:hintTextColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_register_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- שם משתמש -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_register_user_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/UserName"
            android:maxWidth="488dp"
            app:hintTextColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_register_birth_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- סיסמה -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_register_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/Password"
            android:maxWidth="488dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_register_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- אימות סיסמה -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_register_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:maxWidth="488dp"
            android:hint="@string/PassVer"
            app:endIconMode="password_toggle"
            app:hintTextColor="#333333"
            app:layout_constraintTop_toBottomOf="@id/et_register_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#000000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- כפתור הרשמה -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_register"
            android:layout_width="224dp"
            android:layout_height="53dp"
            android:maxWidth="488dp"
            android:layout_marginTop="24dp"
            android:text="@string/SignUp"
            android:textColor="#FFFFFF"
            android:backgroundTint="#6200EE"
            android:textSize="18sp"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_register_confirm_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
