<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/register"
    android:background="@drawable/main_background"
    tools:context=".screens.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:id="@+id/main">

        <!-- כותרת -->
        <TextView
            android:id="@+id/tvTitleUpdateDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="עדכון פרטים"
            android:textSize="40sp"
            android:shadowColor="@android:color/holo_blue_light"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/gan"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp" />

        <!-- שם פרטי -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_update_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/FirstName"
            android:maxWidth="488dp"
            app:boxBackgroundColor="#66FFFFFF"
            app:boxBackgroundMode="outline"
            app:hintTextColor="#5C6166"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleUpdateDetails">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- שם משפחה -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_update_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/LastName"
            android:maxWidth="488dp"
            app:boxBackgroundColor="#66FFFFFF"
            app:boxBackgroundMode="outline"
            app:hintTextColor="#5C6166"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_update_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- דוא"ל -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_update_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/Email"
            android:maxWidth="488dp"
            app:boxBackgroundColor="#66FFFFFF"
            app:boxBackgroundMode="outline"
            app:hintTextColor="#5C6166"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_update_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- נייד -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_update_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/PhoneNumber"
            android:maxWidth="488dp"
            app:boxBackgroundColor="#66FFFFFF"
            app:boxBackgroundMode="outline"
            app:hintTextColor="#5C6166"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_update_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- תאריך לידה -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_update_birth_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/DateOfBirth"
            android:maxWidth="488dp"
            app:boxBackgroundColor="#66FFFFFF"
            app:boxBackgroundMode="outline"
            app:hintTextColor="#5C6166"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_update_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- שם משתמש -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_update_user_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/UserName"
            android:maxWidth="488dp"
            app:boxBackgroundColor="#66FFFFFF"
            app:boxBackgroundMode="outline"
            app:hintTextColor="#5C6166"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_update_birth_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- סיסמה -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_update_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/Password"
            android:maxWidth="488dp"
            app:boxBackgroundColor="#66FFFFFF"
            app:boxBackgroundMode="outline"
            app:hintTextColor="#5C6166"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_update_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- אימות סיסמה -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_update_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/PassVer"
            android:maxWidth="488dp"
            app:boxBackgroundColor="#66FFFFFF"
            app:boxBackgroundMode="outline"
            app:hintTextColor="#5C6166"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_visibility"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_update_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- כפתור הרשמה -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_profile"
            android:layout_width="224dp"
            android:layout_height="53dp"
            android:maxWidth="488dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_blue_selector"
            app:backgroundTint="@null"
            android:text="שמור"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_update_confirm_password" />

        <Button
            android:id="@+id/goBackBtn3"
            android:layout_width="81dp"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="right"
            android:text="➜"
            android:textColor="@color/black"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
